# capalloc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FORMULAS.md  LICENSE  OPTIMIZATION.md  PROJECT_SETUP.md  README.md  SUMMARY.md  assets.csv
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/application/: mod.rs
src/domain/: mod.rs
src/repository/: asset_repository.rs  formula_repository.rs  mod.rs
src/services/: mod.rs  optimizer.rs  risk_calculator.rs
src/ui/: app_state.rs  mod.rs  renderer.rs  ui_renderer.rs
